# bibin-tailscale

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  integration_tests.sh
.devcontainer/: devcontainer.json
.devcontainer/tailscale/: tailscaled-devcontainer-start.sh
.github/workflows/: main.yml
src/: auth.rs  config.rs  get.rs  highlight.rs  io.rs  isplaintextrequest.rs  main.rs  write.rs
templates/: base.html  curl_help.txt  index.html  paste.html
