[package]
name = "bibin"
version = "1.1.9"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Simon M. <git@simon.marache.net>"]
edition = "2018"

[dependencies]
qrcode-generator = "4.1.1"
rocket = "0.5.0-rc.1"
askama = "0.10.5"
rand = "0.8.4"
gpw = "0.1"
syntect = "4.5.0"
async-trait = "0.1"
base64 = "0.13.0"
log = "0.4.14"
serde = "1.0.126"
sqlx = { version = "0.5.5", features = ['runtime-tokio-rustls', 'sqlite'] }

[profile.release]
lto = true
codegen-units = 1
incremental = false
