[package]
name = "bibin"
version = "1.1.9"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Simon M. <git@simon.marache.net>"]
edition = "2018"

[dependencies]
qrcode-generator = "4.1.1"
rocket = "0.5.0-rc"
askama = "0.12.0"
rand = "0.8.4"
syntect = "5.0.0"
async-trait = "0.1"
base64 = "0.21.0"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.96"
sqlx = { version = "0.6.2", features = ['runtime-tokio-rustls', 'sqlite'] }

[profile.release]
lto = true
codegen-units = 1
incremental = false
