[package]
name = "bibin"
version = "1.1.9"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Simon M. <git@simon.marache.net>"]
edition = "2018"

[dependencies]
qrcode-generator = "4.1"
rocket = "0.5"
askama = "0.12"
rand = "0.8"
syntect = "5.2"
async-trait = "0.1"
base64 = "0.22"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ['runtime-tokio-rustls', 'sqlite'] }

[profile.release]
lto = true
codegen-units = 1
incremental = false
